tests/integration/snapshots/formatter/test_fmt_stdin_syntax_error.stderr.txt
error[C001]: syntax error: unexpected `(`. Expected: ;, ->, :, |, asm, const, enum, fun, ….
  --> contracts/stdin-buffer[LINE]
  |
1 | fun main( {
  |         ^

Error: Failed to format stdin due to syntax error
